修改前端登录界面、增加注释、将json存储路径转化为绝对路径